# rehearsal-song-extractor

./: .gitignore  README.md  debug_region.py  extract_songs.py  extract_songs_ai.py  pyproject.toml  rse.py  rst.py
openspec/: projects.md
openspec/changes/archive/2026-01-30-improve-vocal-beat-detection/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-30-labeled-mp3-output/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-30-labeled-mp3-output/specs/labeled-output/: spec.md
openspec/changes/archive/2026-01-30-rse-log-output/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-30-song-tagger-tool/: design.md  proposal.md  tasks.md
openspec/specs/extraction-log/: spec.md
openspec/specs/loudness-dip-detection/: spec.md
openspec/specs/song-tagger/: spec.md
openspec/specs/yaml-metadata-template/: spec.md
